Changes to satisfy tests
Updated various parts to make tests run smoothly. Integrated models that need pre-training (GRU4RECKG, KSR, KGGLM) directly inside test_model_auto. Handled data creation in tests through temporary directories. Several fixes across different models. Reworked kg_dataset to completely remove graph_dict and integrate inside kg_dataset. Fixed PGPR and CAFE as well, also updating path_constraints in config. New workflows to use new test pipelines with reusable workflows

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Saved models
 /saved*
 *.pth
+.tox
 
 .vscode/
 .idea/
@@ -26,3 +27,4 @@ dataset/
 hyper/
 *.txt
 *.*emb
+!tests/test_data/test/*.*emb
