--- a/hopwise/properties/quick_start_config/knowledge_base_on_ml-100k.yaml
+++ b/hopwise/properties/quick_start_config/knowledge_base_on_ml-100k.yaml
@@ -1,23 +1,42 @@
+# path_constraint: [
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"],["film.film.prequel","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.actor","entity"],["film.film.actor","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.actor.film","entity"],["film.actor.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"],["film.film.sequel","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film_subject.films","entity"],["film.film_subject.films","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.subjects","entity"],["film.film.subjects","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.rating","entity"],["film.film.rating","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.content_rating.film","entity"],["film.content_rating.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.genre","entity"],["film.film.genre","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film_genre.films_in_this_genre","entity"],["film.film_genre.films_in_this_genre","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.written_by","entity"],["film.film.written_by","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.writer.film","entity"],["film.writer.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.directed_by","entity"],["film.film.directed_by","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.director.film","entity"],["film.director.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.cinematography","entity"],["film.film.cinematography","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.cinematographer.film","entity"],["film.cinematographer.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.produced_by","entity"],["film.film.produced_by","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.producer.film","entity"],["film.producer.film","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.production_companies","entity"],["film.film.production_companies","entity"]],
+#   [[null, 'user'], ["[UI-Relation]","entity"], ["film.production_company.films","entity"],["film.production_company.films","entity"]],
+# ]
+
 path_constraint: [
-    [[UI-Relation],[UI-Relation],[UI-Relation]],
-    [[UI-Relation],'film.film.prequel','film.film.prequel'],
-    [[UI-Relation],'film.film.actor','film.film.actor'],
-    [[UI-Relation],'film.actor.film','film.actor.film'],
-    [[UI-Relation],'film.film.sequel','film.film.sequel'],
-    [[UI-Relation],'film.film_subject.films','film.film_subject.films'],
-    [[UI-Relation],'film.film.subjects', 'film.film.subjects'],
-    [[UI-Relation],'film.film.rating','film.film.rating'],
-    [[UI-Relation],'film.content_rating.film','film.content_rating.film'],
-    [[UI-Relation],'film.film.genre','film.film.genre'],
-    [[UI-Relation],'film.film_genre.films_in_this_genre','film.film_genre.films_in_this_genre'],
-    [[UI-Relation],'film.film.written_by','film.film.written_by'],
-    [[UI-Relation],'film.writer.film','film.writer.film'],
-    [[UI-Relation],'film.film.directed_by','film.film.directed_by'],
-    [[UI-Relation],'film.director.film','film.director.film'],
-    [[UI-Relation],'film.film.cinematography','film.film.cinematography'],
-    [[UI-Relation],'film.cinematographer.film','film.cinematographer.film'],
-    [[UI-Relation],'film.film.produced_by','film.film.produced_by'],
-    [[UI-Relation],'film.producer.film','film.producer.film'],
-    [[UI-Relation],'film.film.production_companies','film.film.production_companies'],
-    [[UI-Relation],'film.production_company.films','film.production_company.films']
+  [[null, 'user'], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"]],
+  # [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"]],
+  # [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"], ["film.film.prequel","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"], ["film.film.sequel","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.actor","entity"],["film.actor.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.actor.film","entity"],["film.actor.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film_subject.films","entity"],["film.film_subject.films","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.subjects","entity"],["film.film.subjects","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.rating","entity"],["film.content_rating.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.genre","entity"],["film.film_genre.films_in_this_genre","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.written_by","entity"],["film.writer.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.directed_by","entity"],["film.director.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.cinematography","entity"],["film.cinematographer.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.produced_by","entity"],["film.producer.film","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.production_companies","entity"],["film.production_company.films","entity"]],
 ]
