--- a/hopwise/properties/quick_start_config/sequential_embedding_model.yaml
+++ b/hopwise/properties/quick_start_config/sequential_embedding_model.yaml
@@ -1,5 +1,15 @@
 load_col:
     inter: ['user_id', 'item_id', 'rating', 'timestamp']
-    ent: ['ent_id', 'ent_emb']
-additional_feat_suffix: ent
+    entityemb: ['entity_embedding_id', 'entity_embedding']
+    relationemb: ['relation_embedding_id', 'relation_embedding']
+
+additional_feat_suffix: [entityemb, relationemb]
+
+alias_of_entity_id: [entity_embedding_id]
+alias_of_relation_id: [relation_embedding_id]
+
+preload_weight:
+    entity_embedding_id: entity_embedding
+    relation_embedding_id: relation_embedding
+
 repeatable: True
