--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,22 +88,6 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-cpu = [
-  "torch==2.4.0 ; sys_platform == 'win32'",
-  "dgl",
-]
-cu118 = [
-  "torch==2.3.*",
-  "dgl",
-]
-cu121 = [
-  "torch==2.3.*",
-  "dgl",
-]
-cu124 = [
-  "torch==2.4.*",
-  "dgl==2.4.*",
-]
 nncf = [
   "community",
   "python-louvain"
@@ -120,9 +104,9 @@ lightgbm = [
 ldiffrec = [
   "kmeans-pytorch"
 ]
-kgin = [
-  "torch-scatter",
-]
+# kgin = [
+#   "torch-scatter",
+# ]
 hyper = [
   "hyperopt==0.2.5",
   "optuna",
@@ -134,10 +118,26 @@ all-models = [
   "hopwise[ncl]",
   "hopwise[lightgbm]",
   "hopwise[ldiffrec]",
-  "hopwise[kgin]",
+  # "hopwise[kgin]",
 ]
 
 [dependency-groups]
+cpu = [
+  "torch==2.4.0 ; sys_platform == 'win32'",
+  "dgl",
+]
+cu118 = [
+  "torch==2.3.*",
+  "dgl",
+]
+cu121 = [
+  "torch==2.3.*",
+  "dgl",
+]
+cu124 = [
+  "torch==2.4.*",
+  "dgl==2.4.*",
+]
 docs = [
   "sphinx",
   "furo",
@@ -151,7 +151,6 @@ lint = [
   "pre-commit"
 ]
 dev = [
-  "hopwise[cu121]",
   "hopwise[all-models]",
   "plotly",
   "opentsne",
@@ -184,27 +183,28 @@ find-links = [
 ]
 conflicts = [
   [
-    { extra = "cpu" },
-    { extra = "cu118" },
-    { extra = "cu121" },
-    { extra = "cu124" },
+    { group = "cpu" },
+    { group = "cu118" },
+    { group = "cu121" },
+    { group = "cu124" },
   ],
 ]
+no-build-isolation-package = ["torch-scatter"]
 
 [tool.uv.sources]
 dgl = [
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
 ]
 
 [tool.ruff]
