--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,24 +12,33 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        env: [cpu, cu118, cu121, cu124]
-        python-version: ["3.9", "3.10", "3.11"]
+        env: [cpu, cu121]
+        python-version: ["3.10"]
         experimental: [false]
         include:
-          - python-version: "3.12"
-            os: ubuntu-latest
+          - os: ubuntu-latest
+            env: cu121
+            python-version: "3.12"
             experimental: true
-          - os: windows-latest
+
+          - os: ubuntu-latest
+            env: cu121
             python-version: "3.9"
-            experimental: true
+            experimental: true  # not realy experimental, but avoids running tests on 3.9
+
           - os: windows-latest
+            env: cpu
             python-version: "3.10"
             experimental: true
-          - os: windows-latest
+
+          - os: ubuntu-latest
+            env: cu118
             python-version: "3.11"
-            experimental: true
-          - os: windows-latest
-            python-version: "3.12"
+            experimental: false
+
+          - os: ubuntu-latest
+            env: cu124
+            python-version: "3.10"
             experimental: true
 
     uses: ./.github/workflows/sync_and_test.yml
