--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -11,28 +11,27 @@ on:
         type: string
 
 jobs:
+  sync:
+    uses: ./.github/workflows/sync.yml
+    with:
+      env: cu121
+      python-version: ${{ inputs.python-version }}
+      os: ${{ inputs.os }}
+      experimental: false
   lint:
+    needs: sync
     runs-on: ${{ inputs.os }}
     outputs:
       lint_status: ${{ steps.test_code_format.outputs.status }}
 
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Install uv and set the python version
-        uses: astral-sh/setup-uv@v5
-        with:
-          python-version: ${{ inputs.python-version }}
-
-      - name: Install dependencies
-        run: |
-          uv pip install ruff
       - uses: astral-sh/ruff-action@v3
       - name: Test code format
         id: test_code_format
         run: |
-          ruff check --fix
-          ruff format
+          uv run ruff check --fix
+          uv run ruff format
+          uv run ruff check --select I --fix
           echo "status=success" >> $GITHUB_OUTPUT
       - name: Apply code-format changes
         uses: stefanzweifel/git-auto-commit-action@v5
