--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -51,5 +51,5 @@ jobs:
   lint:
     uses: ./.github/workflows/lint.yml
     with:
-      python-version: 3.10
+      python-version: "3.10"
       os: ubuntu-latest
