--- a/hopwise/properties/model/CAFE.yaml
+++ b/hopwise/properties/model/CAFE.yaml
@@ -15,8 +15,9 @@ epochs: 50
 eval_step: 50
 topk: [10]
 valid_metric: 'ndcg@10'
-metrics: ['NDCG', 'NDCG_old', 'MRR', 'Hit', 'Precision', 'Recall', GiniIndex, Serendipity, Novelty, ItemCoverage]
+#metrics: ['NDCG', 'NDCG_old', 'MRR', 'Hit', 'Precision', 'Recall', GiniIndex, Serendipity, Novelty, ItemCoverage]
 
+metrics: ['NDCG', 'NDCG_old', 'MRR', 'Hit', 'Precision', 'Recall', 'LIR', 'Fidelity', 'SEP', 'LID','SED', 'PTD', 'PTC', 'LITD', 'SETD', 'PPT']
 
 # Embeddings
 additional_feat_suffix: [useremb, entityemb, relationemb]
