--- a/hopwise/properties/model/PEARLM.yaml
+++ b/hopwise/properties/model/PEARLM.yaml
@@ -5,7 +5,8 @@ context_length: 24              # (int) Maximum length of the context.
 embedding_size: 768             # (int) Size of the embeddings.
 num_heads: 12                   # (int) Number of heads in the multi-head attention.
 num_layers: 6                   # (int) Number of layers in the transformer.
-
+save_dataloaders: False
+save_dataset: False
 
 path_sample_args:
     restrict_by_phase: False    # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
