--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -36,15 +36,16 @@ jobs:
         run: |
           uv sync --group ${{ inputs.env }}
 
-          # install torch-sparse
-          if [ "${{ inputs.env }}" == "cu124" ]; then
-            uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cu124.html
-          elif [ "${{ inputs.env }}" == "cpu" ]; then
-            uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cpu.html
-          elif [ "${{ inputs.env }}" == "cu118" ]; then
-            uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cu118.html
-          else
-            uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.3.1+cu121.html
-          fi
-
-          echo "status=success" >> $GITHUB_OUTPUT
+      - if: ${{ inputs.env == 'cu124' }}
+        run: |
+          uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cu124.html
+      - if: ${{ inputs.env == 'cpu' }}
+        run: |
+          uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cpu.html
+      - if: ${{ inputs.env == 'cu118' }}
+        run: |
+          uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.4.0+cu118.html
+      - if: ${{ inputs.env == 'cu121' }}
+        run: |
+          uv pip install torch-sparse -f https://data.pyg.org/whl/torch-2.3.1+cu121.html
+      - run: echo "status=success" >> $GITHUB_OUTPUT
