--- a/.github/workflows/sync_and_test.yml
+++ b/.github/workflows/sync_and_test.yml
@@ -31,6 +31,7 @@ jobs:
       test_status: ${{ steps.test_project.outputs.status }}
 
     steps:
+      - uses: actions/checkout@v4
       - name: Install project
         uses: ./.github/workflows/sync.yml
         with:
