Updated worfklows to fix isolated environments issue

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,25 +13,19 @@ on:
 jobs:
   lint:
     runs-on: ${{ inputs.os }}
-    outputs:
-      lint_status: ${{ steps.test_code_format.outputs.status }}
 
     steps:
       - uses: actions/checkout@v4
-      - uses: ./.github/workflows/sync.yml
+      - name: Install uv and set the python version
+        uses: astral-sh/setup-uv@v5
         with:
-          env: cu121
           python-version: ${{ inputs.python-version }}
-          os: ${{ inputs.os }}
-          experimental: false
       - uses: astral-sh/ruff-action@v3
-      - name: Test code format
-        id: test_code_format
+      - name: Lint code
         run: |
           uv run ruff check --fix
           uv run ruff format
           uv run ruff check --select I --fix
-          echo "status=success" >> $GITHUB_OUTPUT
       - name: Apply code-format changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
