--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ wandb/*
 /ray_log*
 config/
 !hopwise/config/
+!tests/config/
 .venv/
 venv/
 testModules.py
@@ -24,6 +25,7 @@ tempCodeRunnerFile.py
 .env
 dataset/
 !hopwise/data/dataset
+!hopwise/properties/dataset
 hyper/
 *.txt
 *.*emb
