--- a/hopwise/properties/dataset/sample.yaml
+++ b/hopwise/properties/dataset/sample.yaml
@@ -34,6 +34,7 @@ alias_of_item_id: ~             # (list) Fields' names remapped into the same in
 alias_of_entity_id: ~           # (list) Fields' names remapped into the same index system with ENTITY_ID_FIELD.
 alias_of_relation_id: ~         # (list) Fields' names remapped into the same index system with RELATION_ID_FIELD.
 preload_weight: ~               # (dict) Preloaded weight in {IDs (token): pretrained vectors (float-like)}.
+preload_weight_path: ~          # (str) Optional path to load the preloaded weight, otherwise, data_path will be used.
 normalize_field: ~              # (list) List of filed names to be normalized.
 normalize_all: ~                # (bool) Whether or not to normalize all the float like fields.
 discretization: ~               # (dict) The discretization settings.
