--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,6 +20,9 @@ jobs:
         uses: astral-sh/setup-uv@v5
         with:
           python-version: ${{ inputs.python-version }}
+      - name: Install the project to follow ruff directives in pyproject.toml
+        run: |
+          uv sync --group "cu121"
       - uses: astral-sh/ruff-action@v3
       - name: Lint code
         run: |
