--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -12,41 +12,46 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest]
-        env: [cpu, cu121]
+        env: [cu121]
         python-version: ["3.10"]
-        experimental: [false]
+        experimental_or_skip_heavy_tests: [false]
         include:
           - os: ubuntu-latest
             env: cu121
             python-version: "3.12"
-            experimental: true
+            experimental_or_skip_heavy_tests: true
+
+          - os: ubuntu-latest
+            env: cpu
+            python-version: "3.10"
+            experimental_or_skip_heavy_tests: true
 
           - os: ubuntu-latest
             env: cu121
             python-version: "3.9"
-            experimental: true  # not realy experimental, but avoids running tests on 3.9
+            experimental_or_skip_heavy_tests: true
 
           - os: windows-latest
             env: cpu
             python-version: "3.10"
-            experimental: true
+            experimental_or_skip_heavy_tests: true
 
           - os: ubuntu-latest
             env: cu118
             python-version: "3.11"
-            experimental: false
+            experimental_or_skip_heavy_tests: true
 
           - os: ubuntu-latest
             env: cu124
             python-version: "3.10"
-            experimental: true
+            experimental_or_skip_heavy_tests: true
 
     uses: ./.github/workflows/sync_and_test.yml
     with:
       env: ${{ matrix.env }}
       python-version: ${{ matrix.python-version }}
       os: ${{ matrix.os }}
-      experimental: ${{ matrix.experimental }}
+      experimental_or_skip_heavy_tests: ${{ matrix.experimental_or_skip_heavy_tests }}
 
   lint:
     uses: ./.github/workflows/lint.yml
