--- a/hopwise/properties/model/KGLRR.yaml
+++ b/hopwise/properties/model/KGLRR.yaml
@@ -1,44 +1,59 @@
-# Configuration file for KGLRR model## 没有写入配置文件的都采用了默认值
-tensorboard: 1
-prefix: '0520'
-board_path: "../result"
-device: '0'
+# Adapted configuration file for KGLRR model to fit PGPR-like project structure
 
-pretrain: False
-seed: 2023
+state_history: 1                     # Nessuna storia temporale in KGLRR
+max_acts: 250                        # Compatibile con PGPR
+gamma: 0.95                          # Dal file originale
+action_dropout: 0.0                  # Non usato in KGLRR, ma mantenuto per compatibilità
+hidden_sizes: [64, 32]               # Basato su `latent_dim_rec: 64`, dimensione più piccola come secondo layer
+max_path_len: 3                      # Fittizio, non usato in KGLRR ma richiesto da PGPR
+weight_factor: 1e-4                  # Basato su `r_logic`/`l2_loss`
+beam_search_hop: [10,5,1]            # Fittizio, tuning possibile
 
-# dataset setting
-dataset: yelp2018
-maxhis : 10
-topks  : [10, 20]
+# The kge embeddings necessary to score paths
+additional_feat_suffix: [useremb, entityemb, relationemb]
 
-# model setting
-kgcn: "RGAT"
+# The path constraint to be used. Options are:
+path_constraint: none
 
-# Specifica la dimensione del vettore latente utilizzato per la rappresentazione degli utenti e degli elementi nel modello di raccomandazione.
-# Un valore più alto può catturare più caratteristiche, ma aumenta la complessità computazionale.
+# To load the pretrained embeddings (Typically from TransE) necessary to score the paths
+load_col:
+    useremb: [userid, user_embedding]
+    entityemb: [entityid, entity_embedding]
+    relationemb: [relationid, relation_embedding]
+
+alias_of_user_id: [userid]
+alias_of_entity_id: [entityid]
+alias_of_relation_id: [relationid]
+
+preload_weight:
+  userid: user_embedding
+  entityid: entity_embedding
+  relationid: relation_embedding
+
+# KGLRR specific (aggiunti come custom keys)
+use_kgcn: "RGAT"
 latent_dim_rec: 64
 lightGCN_n_layers: 3
-train_trans: True
 entity_num_per_item: 10
-
-kgc_joint : True
-kgc_temp : 0.2
-use_kgc_pretrain : False
-pretrain_kgc : False
-ssl_reg : 0.1
-dropout : 1
+kgc_joint: true
+kgc_temp: 0.2
+ssl_reg: 0.1
+dropout: 1
 
 r_logic: 1.0e-4
 r_length: 1.0e-5
 l2_loss: 1.0e-4
-loss_sum: True
 
-epoch : 1000
-batch_size : 1024
+batch_size: 1024
 test_u_batch_size: 2048
-lr : 5.0e-4
-test_verbose : 1    ##
-test_start_epoch : 15
-early_stop_cnt : 10
+lr: 5.0e-4
+epochs: 1000
+test_start_epoch: 15
+early_stop_cnt: 10
+test_verbose: 1
 
+# Meta
+tensorboard: true
+seed: 2023
+device: "0"
+dataset: yelp2018
