--- a/hopwise/properties/model/PEARLM.yaml
+++ b/hopwise/properties/model/PEARLM.yaml
@@ -7,6 +7,8 @@ num_heads: 12                   # (int) Number of heads in the multi-head attent
 num_layers: 6                   # (int) Number of layers in the transformer.
 save_dataloaders: False
 save_dataset: False
+ranker: BeamSearchSequenceScoreRanker # one of ['SampleSearchSequenceScoreRanker', 'BeamSearchSequenceScoreRanker', 'SimilaritySequenceScoreRanker', 'CumulativeSequenceScoreRanker']
+logits_processor: ConstrainedBeamLogitsProcessorWordLevel # one of ['ConstrainedBeamLogitsProcessorWordLevel', 'ConstrainedLogitsProcessorWordLevel']
 
 path_sample_args:
     restrict_by_phase: False    # (bool) Whether to restrict the last item in the reasoning path by the used ids in the dataloader phase.
