--- a/hopwise/properties/model/KGLRR.yaml
+++ b/hopwise/properties/model/KGLRR.yaml
@@ -1,66 +1,16 @@
-# Adapted configuration file for KGLRR model to fit PGPR-like project structure
-
-state_history: 1                     # Nessuna storia temporale in KGLRR
-max_acts: 250                        # Compatibile con PGPR
-gamma: 0.95                          # Dal file originale
-action_dropout: 0.0                  # Non usato in KGLRR, ma mantenuto per compatibilità
-hidden_sizes: [64, 32]               # Basato su `latent_dim_rec: 64`, dimensione più piccola come secondo layer
-max_path_len: 3                      # Fittizio, non usato in KGLRR ma richiesto da PGPR
-weight_factor: 1e-4                  # Basato su `r_logic`/`l2_loss`
-beam_search_hop: [10,5,1]            # Fittizio, tuning possibile
-
-# The kge embeddings necessary to score paths
-additional_feat_suffix: [useremb, entityemb, relationemb]
-
-# The path constraint to be used. Options are:
-path_constraint: none
-
-# To load the pretrained embeddings (Typically from TransE) necessary to score the paths
-load_col:
-    useremb: [userid, user_embedding]
-    entityemb: [entityid, entity_embedding]
-    relationemb: [relationid, relation_embedding]
-
-alias_of_user_id: [userid]
-alias_of_entity_id: [entityid]
-alias_of_relation_id: [relationid]
-
-preload_weight:
-  userid: user_embedding
-  entityid: entity_embedding
-  relationid: relation_embedding
-
-# KGLRR specific (aggiunti come custom keys)
+# KGLRR specific
 kgcn: "RGAT"
-latent_dim_rec: 64  # Riduci da 64 a 32
-lightGCN_n_layers: 3  # Riduci da 3 a 2
-entity_num_per_item: 10  # Riduci da 10 a 5
-kgc_joint: true
-kgc_temp: 0.2
-ssl_reg: 0.1
-dropout: 1  # Riduci da 1 a 0.2
+latent_dim_rec: 64
+lightGCN_n_layers: 3
+dropout: 1
 
 r_logic: 1.0e-4
 r_length: 1.0e-5
 l2_loss: 1.0e-4
+loss_sum: False
 
-batch_size: 1024  # Riduci da 128 a 64 o anche 32
-test_u_batch_size: 2048  # Riduci il batch size per il test
-lr: 5.0e-4  # Aumenta da 5.0e-4 a 1.0e-3
-test_start_epoch: 15
-early_stop_cnt: 10
-test_verbose: 1
-
-# Evalutation parameters
-eval_batch_size: 8192  # Riduci da 4096 a 2048
-eval_step: 1
+batch_size: 1024
 
 layers: 1
-maxhis: 10  # Riduci da 10 a 5
+maxhis: 10
 sim_scale: 10
-
-# Meta
-tensorboard: true
-seed: 2023
-device: "0"
-dataset: yelp2018
