--- a/tests/model/test_model.yaml
+++ b/tests/model/test_model.yaml
@@ -77,17 +77,17 @@ path_constraint: [
   [[null, 'user'], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"], ["[UI-Relation]","entity"]],
   # [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"]],
   # [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"], ["film.film.prequel","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"], ["film.film.sequel","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.actor","entity"],["film.actor.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.actor.film","entity"],["film.actor.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film_subject.films","entity"],["film.film_subject.films","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.subjects","entity"],["film.film.subjects","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.rating","entity"],["film.content_rating.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.genre","entity"],["film.film_genre.films_in_this_genre","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.written_by","entity"],["film.writer.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.directed_by","entity"],["film.director.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.cinematography","entity"],["film.cinematographer.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.produced_by","entity"],["film.producer.film","entity"]],
-  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.production_companies","entity"],["film.production_company.films","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.prequel","entity"], ["film.film.prequel_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.sequel","entity"], ["film.film.sequel_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.actor","entity"],["film.actor.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.actor.film","entity"],["film.actor.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film_subject.films","entity"],["film.film_subject.films_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.subjects","entity"],["film.film.subjects_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.rating","entity"],["film.content_rating.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.genre","entity"],["film.film_genre.films_in_this_genre_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.written_by","entity"],["film.writer.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.directed_by","entity"],["film.director.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.cinematography","entity"],["film.cinematographer.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.produced_by","entity"],["film.producer.film_r","entity"]],
+  [[null, 'user'], ["[UI-Relation]","entity"], ["film.film.production_companies","entity"],["film.production_company.films_r","entity"]],
 ]
