--- a/.gitignore
+++ b/.gitignore
@@ -27,10 +27,16 @@ dataset/
 !hopwise/data/dataset
 !hopwise/properties/dataset
 hyper/
-model/
+# model/
 *.txt
 *.*emb
 !tests/test_data/test/*.*emb
 test.py
 plot_results.ipynb
 logwatcher.py
+
+ucpr.py
+pearlmgat*.py
+PEARLMGAT*.yaml
+UCPR.yaml
+hopwise/properties/quick_start_config
