--- a/pyproject.toml
+++ b/pyproject.toml
@@ -120,8 +120,6 @@ all-models = [
   "hopwise[ldiffrec]",
   # "hopwise[kgin]",
 ]
-
-[dependency-groups]
 cpu = [
   "torch==2.4.0 ; sys_platform == 'win32'",
   "dgl",
@@ -138,6 +136,8 @@ cu124 = [
   "torch==2.4.*",
   "dgl==2.4.*",
 ]
+
+[dependency-groups]
 docs = [
   "sphinx",
   "furo",
@@ -153,6 +153,7 @@ lint = [
 dev = [
   "hopwise[all-models]",
   "hopwise[hyper]",
+  "hopwise[cu121]",
   "plotly",
   "opentsne",
   "nbformat",
@@ -184,28 +185,28 @@ find-links = [
 ]
 conflicts = [
   [
-    { group = "cpu" },
-    { group = "cu118" },
-    { group = "cu121" },
-    { group = "cu124" },
+    { extra = "cpu" },
+    { extra = "cu118" },
+    { extra = "cu121" },
+    { extra = "cu124" },
   ],
 ]
 no-build-isolation-package = ["torch-scatter"]
 
 [tool.uv.sources]
 dgl = [
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", group = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", group = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
-  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", group = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp39-cp39-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp310-cp310-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp311-cp311-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/dgl-2.2.1-cp312-cp312-win_amd64.whl", extra = "cpu", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp39-cp39-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp310-cp310-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp311-cp311-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu118/dgl-2.2.1%2Bcu118-cp312-cp312-win_amd64.whl", extra = "cu118", marker = "sys_platform == 'win32' and python_version == '3.12'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp39-cp39-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.9'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp310-cp310-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.10'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp311-cp311-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.11'" },
+  { url = "https://data.dgl.ai/wheels/cu121/dgl-2.2.1%2Bcu121-cp312-cp312-win_amd64.whl", extra = "cu121", marker = "sys_platform == 'win32' and python_version == '3.12'" },
 ]
 
 [tool.ruff]
